Serialize font-variation-settings with double-quotes per spec https://bugs.webkit.org/show_bug.cgi?id=182542

Patch by Chris Nardi <cnardi@chromium.org> on 2018-04-30
Reviewed by Myles C. Maxfield.

Source/WebCore:

According to the CSSOM spec [1], all strings should be serialized with double-quotes.
The axis name in font-variation-settings was previously serialized with single-quotes;
change this to double-quotes to match the spec and non-WebKit browsers.

[1]: https://drafts.csswg.org/cssom/#common-serializing-idioms

Updated fast/text/variations/getComputedStyle.html to test the change.

* css/CSSFontVariationValue.cpp:
(WebCore::CSSFontVariationValue::customCSSText const):

LayoutTests:

Updated test to verify double-quotes are used.

* fast/text/variations/getComputedStyle-expected.txt:
* fast/text/variations/getComputedStyle.html:

Canonical link: https://commits.webkit.org/200625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231165 268f45cc-cd09-0410-ab3c-d52691b4dbfc