Source/WebCore/css/CSSFontVariationValue.cpp
@@ -43,10 +43,10 @@ CSSFontVariationValue::CSSFontVariationValue(FontTag tag, float value)
 String CSSFontVariationValue::customCSSText() const
 {
     StringBuilder builder;
-    builder.append('\'');
+    builder.append('"');
     for (char c : m_tag)
         builder.append(c);
-    builder.appendLiteral("' ");
+    builder.appendLiteral("\" ");
     builder.appendNumber(m_value);
     return builder.toString();
 }
